course/devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ascendly
  labels:
    kubernetes.io/metadata.name: ascendly
    app.kubernetes.io/part-of: ascendly
